Fixed emoji picker overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -930,3 +930,7 @@ table {
     right: 0;
   }
 }
+
+emoji-picker {
+  width: 100%;
+}
